force-app/main/default/objects/Estimate_Request__c/fields/Length_of_Bond_Paper__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Bond_Paper__c</fullName>
    <label>Length of Bond Paper</label>
    <length>20</length>
    <type>Text</type>
</CustomField>