force-app/main/default/objects/Estimate_Request__c/fields/Length_of_Label_Stock__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Label_Stock__c</fullName>
    <inlineHelpText>Enter the length of label stock to the glue line</inlineHelpText>
    <label>Length of Label Stock</label>
    <length>20</length>
    <type>Text</type>
</CustomField>