force-app/main/default/objects/Estimate_Request__c/fields/LG__c.field-meta.xml
<CustomField>
    <fullName>LG__c</fullName>
    <description>Used for apparel estimating</description>
    <label>LG</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>