force-app/main/default/objects/Estimate_Request__c/fields/Machine_Model__c.field-meta.xml
<CustomField>
    <fullName>Machine_Model__c</fullName>
    <label>Machine Model</label>
    <length>40</length>
    <type>Text</type>
</CustomField>