force-app/main/default/objects/Estimate_Request__c/fields/Machine_OEM__c.field-meta.xml
<CustomField>
    <fullName>Machine_OEM__c</fullName>
    <label>Machine OEM</label>
    <length>40</length>
    <type>Text</type>
</CustomField>