force-app/main/default/objects/Estimate_Request__c/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <label>Mail</label>
    <type>Date</type>
</CustomField>