force-app/main/default/objects/Estimate_Request__c/fields/Mail_Files__c.field-meta.xml
<CustomField>
    <fullName>Mail_Files__c</fullName>
    <label>Mail Files</label>
    <type>Date</type>
</CustomField>