force-app/main/default/objects/Estimate_Request__c/fields/Mailing_Addressing__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Addressing__c</fullName>
    <label>Mailing Addressing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ink jet address / 1 inch Prt Head</fullName>
            </value>
            <value>
                <fullName>Multi-head ink jet / 4 inch Prt Head</fullName>
            </value>
            <value>
                <fullName>Apply indica with ink jet</fullName>
            </value>
            <value>
                <fullName>Ink jet message lines</fullName>
            </value>
            <value>
                <fullName>Piece will be glued closed in bindery</fullName>
            </value>
            <value>
                <fullName>Tabbing - 1 tab</fullName>
            </value>
            <value>
                <fullName>Tabbing - 2 tabs</fullName>
            </value>
            <value>
                <fullName>Tabbing - 3 tabs</fullName>
            </value>
            <value>
                <fullName>Slim Jim format - 3 tabs x 1.5inch</fullName>
            </value>
            <value>
                <fullName>White tabs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>