force-app/main/default/objects/Estimate_Request__c/fields/Mailing_Data__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Data__c</fullName>
    <label>Mailing Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Base Data Service</fullName>
            </value>
            <value>
                <fullName>NCOA</fullName>
            </value>
            <value>
                <fullName>Merge / Perge</fullName>
            </value>
            <value>
                <fullName>Tracking / Plant Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>