force-app/main/default/objects/Estimate_Request__c/fields/Mailing_Data_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Data_Formatting__c</fullName>
    <formula>IF(INCLUDES(Mailing_Data__c,&quot;Base Data Service&quot;), &quot;Base Data Service, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Data__c,&quot;NCOA&quot;), &quot;NCOA, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Data__c,&quot;Merge / Perge&quot;), &quot;Merge / Perge, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Mailing_Data__c,&quot;Tracking / Plant Code&quot;), &quot;Tracking / Plant Code&quot;,NULL)+&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Data Formatting</label>
    <type>Text</type>
</CustomField>