force-app/main/default/objects/Estimate_Request__c/fields/Mailing_Finishing__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Finishing__c</fullName>
    <label>Mailing Finishing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Laser 1/0 Black Simplex</fullName>
            </value>
            <value>
                <fullName>Laser 1/1 Black Duplex</fullName>
            </value>
            <value>
                <fullName>Sheet Size Length (Inches)</fullName>
            </value>
            <value>
                <fullName>Sheet Size Height (Inches)</fullName>
            </value>
            <value>
                <fullName>Overprint on litho shell</fullName>
            </value>
            <value>
                <fullName>PDF soft proof</fullName>
            </value>
            <value>
                <fullName>White paper proof</fullName>
            </value>
            <value>
                <fullName>Hard copy proof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>