force-app/main/default/objects/Estimate_Request__c/fields/Mailing_Finishing_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Finishing_Formatting__c</fullName>
    <formula>IF(INCLUDES( Mailing_Finishing__c ,&quot;Laser 1/0 Black Simplex&quot;), &quot;Laser 1/0 Black Simplex, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Laser 1/1 Black Duplex&quot;), &quot;Laser 1/1 Black Duplex, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Sheet Size Length (Inches)&quot;), &quot;Sheet Size Length (Inches), &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Sheet Size Height (Inches)&quot;), &quot;Sheet Size Height (Inches), &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Overprint on litho shell&quot;), &quot;Overprint on litho shell, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;PDF soft proof&quot;), &quot;PDF soft proof, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;White paper proof&quot;), &quot;White paper proof, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Finishing__c ,&quot;Hard copy proof&quot;), &quot;Hard copy proof&quot;,NULL)+&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Finishing Formatting</label>
    <type>Text</type>
</CustomField>