force-app/main/default/objects/Estimate_Request__c/fields/Mailing_Handling__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Handling__c</fullName>
    <label>Mailing Handling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permit Imprint</fullName>
            </value>
            <value>
                <fullName>Live / Pre-Cancelled Stamps</fullName>
            </value>
            <value>
                <fullName>Standard Mail</fullName>
            </value>
            <value>
                <fullName>Nonprofit Standard Mail</fullName>
            </value>
            <value>
                <fullName>First Class Mail</fullName>
            </value>
            <value>
                <fullName>Bound Printed Matter</fullName>
            </value>
            <value>
                <fullName>Periodicals</fullName>
            </value>
            <value>
                <fullName>Job does not mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>