force-app/main/default/objects/Estimate_Request__c/fields/Mailing_Handling_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Handling_Formatting__c</fullName>
    <formula>IF(INCLUDES( Mailing_Handling__c ,&quot;Permit Imprint&quot;), &quot;Permit Imprint, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Live / Pre-Cancelled Stamps&quot;), &quot;Live / Pre-Cancelled Stamps, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Standard Mail&quot;), &quot;Standard Mail, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Nonprofit Standard Mail&quot;), &quot;Nonprofit Standard Mail, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;First Class Mail&quot;), &quot;First Class Mail, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Bound Printed Matter&quot;), &quot;Bound Printed Matter, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Periodicals&quot;), &quot;Periodicals, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES( Mailing_Handling__c ,&quot;Job does not mail&quot;), &quot;Job does not mail&quot;,NULL)+&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Handling Formatting</label>
    <type>Text</type>
</CustomField>