force-app/main/default/objects/Estimate_Request__c/fields/Mailing_Inserting__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Inserting__c</fullName>
    <label>Mailing Inserting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Envelope size</fullName>
            </value>
            <value>
                <fullName># Inserts per package</fullName>
            </value>
            <value>
                <fullName>Insert into booklet envelope</fullName>
            </value>
            <value>
                <fullName>Insert into catalog envelope</fullName>
            </value>
            <value>
                <fullName>Nest into another piece</fullName>
            </value>
            <value>
                <fullName>Polybag / Polywrap</fullName>
            </value>
            <value>
                <fullName>Shrinkwrap</fullName>
            </value>
            <value>
                <fullName>Match 1 insert to address</fullName>
            </value>
            <value>
                <fullName>Match 2 insert to address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>