force-app/main/default/objects/Estimate_Request__c/fields/Manufacturing_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Approval__c</fullName>
    <label>Manufacturing Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejceted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>