force-app/main/default/objects/Estimate_Request__c/fields/Manufacturing_Location__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Estimates</relationshipLabel>
    <relationshipName>Estimates</relationshipName>
    <type>Lookup</type>
</CustomField>