force-app/main/default/objects/Estimate_Request__c/fields/Margin_All_Quanitites__c.field-meta.xml
<CustomField>
    <fullName>Margin_All_Quanitites__c</fullName>
    <inlineHelpText>Enter the margin percent in this area if the same margin will apply to all quoted quantities.</inlineHelpText>
    <label>Margin - All Quanitites</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>