force-app/main/default/objects/Estimate_Request__c/fields/Margin_All_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Margin_All_Quantities__c</fullName>
    <label>Margin All Quantities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>