force-app/main/default/objects/Estimate_Request__c/fields/Margin_CP_All__c.field-meta.xml
<CustomField>
    <fullName>Margin_CP_All__c</fullName>
    <description>This is to apply a set % to all QTY&apos;s for Commercial Print Estimating</description>
    <inlineHelpText>A value entered in this field will apply to all QTY&apos;s/Costs to determine the sell price for each QTY.</inlineHelpText>
    <label>Margin CP-All</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>