force-app/main/default/objects/Estimate_Request__c/fields/Margin_Estimation_3__c.field-meta.xml
<CustomField>
    <fullName>Margin_Estimation_3__c</fullName>
    <formula>IF ( Inventory__c,
     (
      (Sales_Price_Estimation_3__c -(
                                   ( Cost_3__c )+ 
                                   (Cost_3__c *  Freight_Percentage__c ) + 
                                   ( Freight_Cost_Per_Case__c ) + 
                                   (Cost_3__c * 0.01)
                                 )
        ) /
                                   ( Sales_Price_Estimation_3__c - 
                                                                 (Cost_3__c *  Freight_Percentage__c )-
                                                                 ( Freight_Cost_Per_Case__c )- 
                                                                 (Cost_3__c * 0.01)
                                                                 
                                    )
      ),
    (
      (Sales_Price_Estimation_3__c -(
                                   ( Cost_3__c )+ 
                                   (Cost_3__c *  Freight_Percentage__c ) + 
                                   ( Freight_Cost_Per_Case__c ) 
                                   
                                 )
        ) /
                                   ( Sales_Price_Estimation_3__c - 
                                                                 (Cost_3__c *  Freight_Percentage__c )-
                                                                 ( Freight_Cost_Per_Case__c )
                                                                 
                                                                 
                                    )
      ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Estimation 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>