force-app/main/default/objects/Estimate_Request__c/fields/Margin_Qty_10__c.field-meta.xml
<CustomField>
    <fullName>Margin_Qty_10__c</fullName>
    <defaultValue>0.30</defaultValue>
    <label>Margin  - Qty 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>