force-app/main/default/objects/Estimate_Request__c/fields/Margin_Qty_1__c.field-meta.xml
<CustomField>
    <fullName>Margin_Qty_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margin  - Qty 1</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>