force-app/main/default/objects/Estimate_Request__c/fields/Master_Roll_Size__c.field-meta.xml
<CustomField>
    <fullName>Master_Roll_Size__c</fullName>
    <label>Master Roll Size</label>
    <type>TextArea</type>
</CustomField>