force-app/main/default/objects/Estimate_Request__c/fields/Material_Grade_OPS__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade_OPS__c</fullName>
    <label>Material Grade - OPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>GMRS</fullName>
            </value>
            <value>
                <fullName>GMNS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>