force-app/main/default/objects/Estimate_Request__c/fields/Material_Grade_PETG__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade_PETG__c</fullName>
    <label>Material Grade - PETG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>K749-22 (LV)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PETG</fullName>
            </value>
            <value>
                <fullName>PVC</fullName>
            </value>
            <value>
                <fullName>OPS</fullName>
            </value>
            <value>
                <fullName>PLA</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>