force-app/main/default/objects/Estimate_Request__c/fields/Material_Grade_PVC_PLA__c.field-meta.xml
<CustomField>
    <fullName>Material_Grade_PVC_PLA__c</fullName>
    <label>Material Grade - PVC/PLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>SRAE (BA) Standard</fullName>
            </value>
            <value>
                <fullName>SRUB (UB) UV</fullName>
            </value>
            <value>
                <fullName>High Impact</fullName>
            </value>
            <value>
                <fullName>High Shrink</fullName>
            </value>
            <value>
                <fullName>SRAE w/ANTISTAT (AT)</fullName>
            </value>
            <value>
                <fullName>PLA Film</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>