force-app/main/default/objects/Estimate_Request__c/fields/Material_Specification__c.field-meta.xml
<CustomField>
    <fullName>Material_Specification__c</fullName>
    <label>Material Specification</label>
    <length>40</length>
    <type>Text</type>
</CustomField>