force-app/main/default/objects/Estimate_Request__c/fields/Material_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Material_Thickness__c</fullName>
    <label>Film Thickness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.5 MIL</fullName>
            </value>
            <value>
                <fullName>1.8 MIL</fullName>
            </value>
            <value>
                <fullName>2.0 MIL</fullName>
            </value>
            <value>
                <fullName>2.4 MIL</fullName>
            </value>
            <value>
                <fullName>2.5 MIL</fullName>
            </value>
            <value>
                <fullName>2.8 MIL</fullName>
            </value>
            <value>
                <fullName>3.0 MIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>