force-app/main/default/objects/Estimate_Request__c/fields/Max_Amt__c.field-meta.xml
<CustomField>
    <fullName>Max_Amt__c</fullName>
    <label>Max Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>