force-app/main/default/objects/Estimate_Request__c/fields/Max_roll_diameter_or_qty_per_roll__c.field-meta.xml
<CustomField>
    <fullName>Max_roll_diameter_or_qty_per_roll__c</fullName>
    <label>Max roll diameter or qty per roll</label>
    <length>25</length>
    <type>Text</type>
</CustomField>