force-app/main/default/objects/Estimate_Request__c/fields/MED__c.field-meta.xml
<CustomField>
    <fullName>MED__c</fullName>
    <description>Used for apparel estimating</description>
    <label>MED</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>