force-app/main/default/objects/Estimate_Request__c/fields/Mfg_Location__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Location__c</fullName>
    <label>Mfg Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Jacksonville</fullName>
            </value>
            <value>
                <fullName>Portland</fullName>
            </value>
            <value>
                <fullName>Dominican Republic</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>