force-app/main/default/objects/Estimate_Request__c/fields/Mill__c.field-meta.xml
<CustomField>
    <fullName>Mill__c</fullName>
    <label>Mill</label>
    <length>40</length>
    <type>Text</type>
</CustomField>