force-app/main/default/objects/Estimate_Request__c/fields/Min_A__c.field-meta.xml
<CustomField>
    <fullName>Min_A__c</fullName>
    <label>Min Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>