force-app/main/default/objects/Estimate_Request__c/fields/Min_Amt__c.field-meta.xml
<CustomField>
    <fullName>Min_Amt__c</fullName>
    <label>Min Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>