force-app/main/default/objects/Estimate_Request__c/fields/Nashua_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Nashua_Item_Number__c</fullName>
    <defaultValue>&quot;TBD&quot;</defaultValue>
    <inlineHelpText>Enter the Nashua item number</inlineHelpText>
    <label>Nashua Item Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>