force-app/main/default/objects/Estimate_Request__c/fields/Need_by_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_by_Date__c</fullName>
    <inlineHelpText>Enter the date you need the estimate returned to you.</inlineHelpText>
    <label>Need by Date</label>
    <type>Date</type>
</CustomField>