force-app/main/default/objects/Estimate_Request__c/fields/Number_Across__c.field-meta.xml
<CustomField>
    <fullName>Number_Across__c</fullName>
    <inlineHelpText>Enter the number across of images it will print on press.</inlineHelpText>
    <label>Number Across</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>