force-app/main/default/objects/Estimate_Request__c/fields/Number_of_Colors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Colors__c</fullName>
    <label>Number of Colors</label>
    <length>40</length>
    <type>Text</type>
</CustomField>