force-app/main/default/objects/Estimate_Request__c/fields/Number_of_Designs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Designs__c</fullName>
    <inlineHelpText>Enter the number of design changes for this item. All design changes have to be the same size and type of label.</inlineHelpText>
    <label>Number of Designs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>