force-app/main/default/objects/Estimate_Request__c/fields/Number_of_Front_Colors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Front_Colors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Front Colors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>