force-app/main/default/objects/Estimate_Request__c/fields/Number_of_Liner_Colors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Liner_Colors__c</fullName>
    <inlineHelpText>Enter the number of colors to be applied to the Liner</inlineHelpText>
    <label>Number of Liner Colors</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>