force-app/main/default/objects/Estimate_Request__c/fields/of_Pages__c.field-meta.xml
<CustomField>
    <fullName>of_Pages__c</fullName>
    <label># of Pages</label>
    <length>80</length>
    <type>Text</type>
</CustomField>