force-app/main/default/objects/Estimate_Request__c/fields/OPP_Material_Grade__c.field-meta.xml
<CustomField>
    <fullName>OPP_Material_Grade__c</fullName>
    <inlineHelpText>Alternate Material grade - Please enter the material</inlineHelpText>
    <label>Material Grade - OPP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>