force-app/main/default/objects/Estimate_Request__c/fields/Option_3_add_on__c.field-meta.xml
<CustomField>
    <fullName>Option_3_add_on__c</fullName>
    <label>Option 3 add on</label>
    <length>20</length>
    <type>Text</type>
</CustomField>