force-app/main/default/objects/Estimate_Request__c/fields/Order_QTY_2__c.field-meta.xml
<CustomField>
    <fullName>Order_QTY_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order QTY 2</label>
    <type>Checkbox</type>
</CustomField>